--- a/PL/UI/Scenes/ContentScene.xaml
+++ b/PL/UI/Scenes/ContentScene.xaml
@@ -3,10 +3,15 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
       d:DesignHeight="680" d:DesignWidth="1280"
       Loaded="ContentScene_Loaded">
 
-    
+    <Grid>
+
+
+
+    </Grid>
 
 </UserControl>
