--- a/PL/UI/MainWindow.xaml
+++ b/PL/UI/MainWindow.xaml
@@ -12,7 +12,8 @@
         Background="Transparent"
         AllowsTransparency="True">
 
-    <Border Background="#272537"
+    <Border x:Name="Border"
+            Background="#272537"
             CornerRadius="13">
         
         <Border.Style>
